--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "node-sass": "^5.0.0",
     "sirv-cli": "^1.0.0",
-    "svelte-preprocess": "^4.6.9"
+    "svelte-preprocess": "^4.6.9",
+    "svelte-spa-router": "^3.1.0"
   }
 }
